# referenced_based_similarity

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  types.rs
