[package]
name = "referenced_based_similarity"
version = "0.1.0"
edition = "2024"

[dependencies]
argmin = { version = "0.11.0", features = ["rayon"] }
argmin-math = { version = "0.5.1", features = ["vec"] }
futures = "0.3.32"
hf-hub = "0.5.0"
ollama-rs = "0.3.4"
rand = "0.10.1"
rayon = "1.12.0"
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "test-util"] }
